signup activity updated with password policy
ultimately signup and login work successfully but summarypopup menu is not working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             tools:ignore="Instantiatable" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".Login1" />
-
+        <activity android:name="CalculatorPopup"
+            tools:ignore="Instantiatable" />
 
 
     </application>
