repository cloned from github

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,11 +41,12 @@
         <activity android:name="com.kushal.mealapp.MealRecyclerView" />
         <activity android:name="com.kushal.mealapp.MealAdapter"
             tools:ignore="Instantiatable" />
-        <activity android:name="com.kushal.mealapp.database.MyApp"
+        <activity android:name="com.kushal.mealapp.MyApp"
             tools:ignore="Instantiatable" />
-        <activity android:name="com.kushal.mealapp.database.DataMainActivity"
+        <activity android:name="com.kushal.mealapp.DataMainActivity"
         tools:ignore="Instantiatable"/>
 
+        <activity android:name="com.kushal.mealapp.MealActivity" />
 
     </application>
 
